// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Problems (Integration) User can create a Problem 1`] = `
Object {
  "answered": false,
  "createdBy": "user1",
  "id": 1,
  "query": "How much wood would a woodchuck chuck if a woodchuck could chuck wood?",
  "type": "riddle",
}
`;

exports[`Problems (Integration) User can list Problems 1`] = `
Array [
  Object {
    "answered": false,
    "createdBy": "user1",
    "id": 1,
    "query": "How much wood would a woodchuck chuck if a woodchuck could chuck wood?",
    "type": "riddle",
  },
]
`;
